# smtpy

./: .dockerignore  .env.production.template  .gitignore  API_ENDPOINTS_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_STATUS_AND_NEXT_STEPS.md  Dockerfile  E2E_TEST_REVIEW.md  LICENSE  MAILSERVER_CONFIGURATION.md  MAILSERVER_DEPLOYMENT.md  MAILSERVER_FIXES.md  MAIL_SERVER_TEST_RESULTS.md  MAIL_TESTING_COMMANDS.md  Makefile  PROJECT_RECREATION_PROMPT.md  README.md  ROADMAP.md  SECURITY_VULNERABILITY_REPORT.md  SMTP_TESTING_GUIDE.md  STRIPE_CONFIGURATION.md  alembic.ini  config.py  configure-stripe.sh  deploy-frontend-fix.sh  docker-compose.dev.yml  docker-compose.mail.yml  docker-compose.prod.yml  docker-compose.yml  fix_imports.py  main.py  main_combined.py  main_smtp.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.md  test-mail-smtpy.sh  (+2 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
.junie/: architecture.md  frontend-guide.md  guidelines.md  quick-reference.md
alembic/: env.py
alembic/versions/: 547f091366a6_add_stripe_customer_id_to_user.py  aa743f0ae8ca_add_subscription_status_to_user.py
api/: __init__.py  endpoints.py
back/: STRIPE_INTEGRATION.md  alembic.ini  test_dns_verification.py  test_log_analysis.py
back/alembic/: env.py
back/alembic/versions/: 670fe8f48b87_initial_migration.py
back/api/: Dockerfile  Dockerfile.prod  main.py  pyproject.toml
back/api/controllers/: alias_controller.py  aliases_controller.py  billing_controller.py  domain_controller.py  domains_controller.py  main_controller.py  messages_controller.py  rules_controller.py  sync_functions_fix.py  user_controller.py
back/api/core/: config.py  db.py  logging_config.py
back/api/database/: aliases_database.py  billing_database.py  (+5 more)
back/core/: config.py
back/scripts/: README_TROUBLESHOOTING.md  fix-nginx-network.sh  generate_missing_dkim_keys.py  seed_dev_db.py  setup_stripe_products.py  test_smtp_config.py  troubleshoot_smtp.py
back/smtp/: Dockerfile  Dockerfile.prod  main.py
back/smtp_receiver/: Dockerfile.prod  __init__.py  handler.py  main.py
back/tests/: conftest.py  test_auth_integration.py  test_auth_unit.py  test_basic.py  test_billing_controller.py  test_debug_auth.py  test_dns_service.py  test_endpoints.py  test_functional_users.py  test_integration.py  test_messages.py  test_models.py  test_security.py
config/: aliases.yaml  db.py  models.py
config/mailserver/: README.md  postfix-main.cf  postfix-transport  postfix-virtual.cf  postscreen_access.cidr  user-patches.sh
config_dns/: loader.py
controllers/: alias_controller.py  billing_controller.py  dns_controller.py  domain_controller.py  main_controller.py  user_controller.py
database/: alias_database.py  billing_database.py  db.py  domain_database.py  models.py  user_database.py
docs/: 100-percent-achievement.md  ALEMBIC_MIGRATION_FIX.md  CI_CD_GUIDE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  DATABASE_ACCESS_SETUP.md  DATABASE_MANAGEMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES_RESOLVED.md  DISASTER_RECOVERY.md  DOCKER_INFRASTRUCTURE_SUMMARY.md  DOCKER_MAILSERVER_INTEGRATION.md  FRONTEND_ENV_FIX.md  GITHUB_SECURITY_SETUP.md  NEXT_STEPS_ROADMAP.md  NGINX_DEPLOYMENT.md  NGINX_DOCKER_NETWORK_SETUP.md  NGINX_PROXY_MANAGER_SETUP.md  PORT_CONFLICT_RESOLUTION.md  POSTFIX_LOG_ANALYSIS.md  POSTFIX_RELAY_TROUBLESHOOTING.md  POSTGRESQL_18_UPGRADE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SETUP.md  QUICKSTART_PRODUCTION.md  QUICK_START_NPM.md  SESSION_SUMMARY_2025_10_26.md  SESSION_SUMMARY_DATABASE_MGMT.md  STRIPE_SETUP.md  TESTING_COMPLETE.md  TESTING_ROADMAP.md  WEEK1_TESTING_STATUS.md  admin.md  advanced.md  api.md  config.md  index.md  setup.md  tasks.md  testing-analysis.md  (+3 more)
docs/features/: admin.feature  authentication.feature  dashboard.feature  email-aliases.feature  message-tracking.feature
features/: billing.feature  domain-management.feature  settings.feature  user-profile.feature  users.feature
forwarding/: forwarder.py
front/: Dockerfile  Dockerfile.prod  README.md  angular.json  generate-icons.py  nginx-default.conf  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json
front/e2e/: README.md  admin.spec.ts  auth-flows.spec.ts  auth-simple.spec.ts  auth.spec.ts  authentication.spec.ts  billing.spec.ts  dashboard.spec.ts  domain-management.spec.ts  domains.spec.ts  email-aliases.spec.ts  email-forwarding.spec.ts  global-hooks.ts  global-setup.ts  helpers.ts  messages.spec.ts  mock-api.ts  navigation.spec.ts  settings.spec.ts  user-profile.spec.ts  users.spec.ts
front/playwright-report/: index.html
front/public/: manifest.json
front/src/: app.component.ts  app.config.ts  app.routes.ts  index.html  main.ts  polyfills.ts  styles.scss
front/test-results/: .last-run.json
nginx/: README.md  smtpy.conf  ssl-setup.sh
scripts/: STRIPE_TROUBLESHOOTING.md  backup-db.sh  db-maintenance.sh  deploy-mailserver.sh  deploy-production.sh  mailserver-healthcheck.sh  manual-update.sh  restore-db.sh  run-tests.sh  security-scan.sh  setup-mailserver.sh  troubleshoot-stripe.py  verify-deployment.sh
security-reports/: README.md
services/: __init__.py  alias_service.py  base.py  domain_service.py  user_service.py
smtp_server/: __init__.py  handler.py
templates/: billing.html  dashboard.html  domain_aliases.html  forgot_password.html  index.html  invite_user.html  login.html  reset_password.html  users.html
tests/: conftest.py  test_basic.py  test_controllers.py  test_endpoints.py  test_integration.py  test_models.py  test_security.py  test_services.py
utils/: csrf.py  db.py  error_handling.py  logging_config.py  rate_limit.py  soft_delete.py  user.py  validation.py
views/: alias_view.py  api.py  billing_view.py  domain_view.py  main_view.py  user_view.py  web.py
web/: app.py  dns_check.py
web/templates/: base.html  dashboard.html  domain_aliases.html  domain_dns.html  forgot_password.html  index.html  presentation.html  register.html
(+294 files in other folders)
